# paper_crawler

./: .flake8  .gitignore  CITATION.bib  CITATION.cff  LICENCE  README.md  download.sh  environment.yml  noxfile.py  pylock.toml  pyproject.toml  pytest.ini  readme.md  requirements.txt  run_all.sh  setup.cfg
.github/workflows/: tests.yml
scripts/: run_all.sh
src/paper_crawler/: _argparse_code.py  crawl_jmlr.py  crawl_links.py  crawl_links_openreview.py  crawl_links_selenium.py  crawl_links_soup.py  crawl_tmlr.py  filter_and_download_links.py  plot_counters.py  process_links.py  process_pages.py
tests/: test_download.py  test_icml24.py  test_jmlr.py  test_openreview_crawler.py  test_process.py  test_soup_crawler.py
