##########################
# Setup.py Configuration #
##########################
[metadata]
name = paper_crawler
version = 0.0.1-dev
description = ML-Paper crawler supplementary code
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/v0lta/position_we_need_more_tests_in_ml
download_url = https://github.com/v0lta/position_we_need_more_tests_in_ml/releases
project_urls =
    Bug Tracker = https://github.com/v0lta/position_we_need_more_tests_in_ml/issues
    Source Code = https://github.com/v0lta/position_we_need_more_tests_in_ml

# Author information
author = Moritz Wolter
author_email = moritz@wolter.tech
maintainer = Moritz Wolter
maintainer_email = moritz@wolter.tech

# License information
license = EUPL-1.2
license_files = LICENSE

keywords =
    Machine Learning Paper Crawler

classifiers =
    License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering

[options]
install_requires =
    openreview-py
    pdfx
    beautifulsoup4
    python-dotenv


python_requires = >=3.9

packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    setuptools
    pytest
    nox



##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = google
strictness = short